// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should HW1 1`] = `
<div
  className="printHW1"
>
  <div>
    <button
      onClick={[Function]}
    >
      <h1>
        counter: 
        0
      </h1>
    </button>
  </div>
</div>
`;

exports[`should simulate onClick event 1`] = `
"<printHW1>
  <div className=\\"printHW1\\">
    <HW1>
      <div>
        <button onClick={[Function: bound handleClick]}>
          <h1>
            counter: 
            1
          </h1>
        </button>
      </div>
    </HW1>
  </div>
</printHW1>"
`;
